# project-crimen-prediction

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: main.py
backend/api/routes/: health.py  historical.py  predict.py
backend/core/: config.py  dependencies.py
backend/middleware/: error_handler.py
backend/schemas/: prediction.py
backend/services/: data_engine.py  prediction_service.py
data/: desempleo_lima.csv  gold_granular_clean.parquet  gold_nacional_96m.parquet  ipc_lima.csv
frontend/: app.py
frontend/assets/: styles.css
frontend/components/: charts.py  metrics.py  sidebar.py
models/: modelo_prediccion_crimen_2026.joblib
notebooks/: 01_eda_statistical_inference.ipynb  02_forecasting_and_modeling.ipynb
scripts/: ingestion.py
tests/: test_api.py  test_services.py
